# python-rson

./: README.md  pyproject.toml
examples/: teams.py  teams.rson
src/rson/: __init__.py  _parser.py  _types.py  rson.py
tests/: test.py  test.rson  tokens.py
