[project]
name = "python-rson"
authors = [
  { name="Xpo Development", email="dev@xpo.dev" },
]
description = "Python implementation of RSON (Reference JSON)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/xpodev/python-rson"
Issues = "https://github.com/xpodev/python-rson/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr="rson.__version__"}
